# s2s

./: .env.example  .gitignore  Makefile  README.md  modal.toml  pyproject.toml
.qwen/: settings.json
.qwen/skills/auto-skill-async-unified-output-queue/: SKILL.md
.qwen/skills/auto-skill-borrow-design-system/: SKILL.md
.qwen/skills/auto-skill-browser-audio-recording-format/: SKILL.md
.qwen/skills/auto-skill-modal-local-vs-remote-debugging/: SKILL.md
.qwen/skills/auto-skill-simple-react-i18n/: SKILL.md
.qwen/skills/auto-skill-streaming-tts-phrase-optimization/: SKILL.md
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  (+2 more)
gateway/: modal.toml  modal_app.py  ws_server.py
modal_apps/: llm.py  sauti_asr.py  sauti_tts.py
pipeline/: barge_in.py  context_manager.py  orchestrator.py  sentence_splitter.py  session.py
scripts/: ws_client.py
shared/: audio_utils.py  exceptions.py  logging.py  metrics.py  schemas.py
tests/: detailed_ws_test.py  e2e_test.py  quick_ws_test.py  test_audio_e2e.py  test_e2e_tts_stream.py  test_long_text.py  test_redirect.py  test_tts_audio_analysis.py  test_tts_direct.py  test_tts_quick.py  test_ws_browser.py  test_ws_remote.py  test_ws_upgrade.py  test_ws_urls.py
tests/benchmarks/: measure_latency.py
tests/unit/: test_deepseek_config.py  test_gateway_modal_app.py  test_gateway_smoke.py  test_gateway_ws_end_to_end.py  test_metrics.py  test_modal_app_imports.py  test_pipeline_tts.py  test_sentence_splitter.py  test_session_import.py  test_tts_audio_postprocess.py
(+9 files in other folders)
